_includes/manuals/1.10/3.3.2_software_collections.md
The RPMs use a packaging technique called Software Collections, or SCL.  This provides Ruby and all dependencies required to run Foreman separately from the version of Ruby provided by the distribution.

A "tfm" (The Foreman) collection is provided by the Foreman project which ships all dependencies for the main Foreman application, and depends on the standard "ruby193" and "v8314" collections which provide Ruby 1.9.3 and Ruby on Rails 3.2.  Packages that are part of these collections will have "tfm-", "ruby193-" and "v8314-" prefixes, allowing them to be easily identified, and will install entirely underneath `/opt/theforeman` and `/opt/rh`.

The system Ruby version is left alone and will still be used for packages provided both by the distribution, and other third parties who target the system Ruby (e.g. Puppet packages).

Foreman currently uses SCL only on RHEL and EL clones where a newer version of Ruby is desired.  Fedora only uses the distro version of Ruby.

In order to run rake commands for Foreman, or scripts that run in the same environment, `tfm-rake` and `tfm-ruby` wrappers are provided as alternatives for the usual `rake` or `ruby`.  In order to run a series of commands or a script directly within the software collection, `scl enable tfm 'other command'` can be used.  It is also possible to run `scl enable tfm bash` to get a shell within the context of the SCL.  Foreman rake tasks should be run with `foreman-rake`, which automates using Foreman's rake environment, changes user etc.

More general information about software collections is available from these links:

* [RHEL packaging: Software Collections (SCLs)](http://jnovy.fedorapeople.org/scl-utils/scl.pdf)
* [Fedora Contributor Documentation: Software Collections Guide](http://docs.fedoraproject.org/en-US/Fedora_Contributor_Documentation/1/html/Software_Collections_Guide/index.html)

#### Passenger under the SCL

When running Foreman under Passenger (the default installer setup), a specific configuration is needed for SCL (on EL), since Foreman operates under the SCL Ruby and other apps such as the puppetmaster will use the system Ruby.  Passenger 4 is shipped in the Foreman repos as it can be configured with separate Ruby binaries per VirtualHost.  The full configuration is described below.

The following packages must be installed:

* mod_passenger
* tfm-rubygem-passenger
* tfm-rubygem-passenger-native
* tfm-rubygem-passenger-native-libs
* rubygem-passenger
* rubygem-passenger-native
* rubygem-passenger-native-libs

Ensure all version numbers match and are at least 4.0.  mod_passenger provides the Apache module, while there are two copies of the Ruby components, one for the SCL Ruby (`tfm-rubygem-*`) and one for the system Ruby (`rubygem-*`).

The `/etc/httpd/conf.d/passenger.conf` file is supplied by mod_passenger and should contain:

    LoadModule passenger_module modules/mod_passenger.so
    <IfModule mod_passenger.c>
       PassengerRoot /usr/lib/ruby/gems/1.8/gems/passenger-4.0.5
       PassengerRuby /usr/bin/ruby
    </IfModule>

Check for .rpmsave or .rpmnew config backup files if this isn't correct.  Note that this refers to the system Ruby paths by default, allowing everything except Foreman (i.e. the puppetmaster) to run under the system Ruby.

Next, the Foreman config file at `/etc/httpd/conf.d/foreman.conf` must contain this entry in both HTTP and HTTPS VirtualHost sections:

    PassengerRuby /usr/bin/tfm-ruby

The full foreman.conf template from the installer is [available here](https://github.com/theforeman/puppet-foreman/blob/master/templates/foreman-vhost.conf.erb) for comparison.

Ensure both `RailsAutoDetect` and `RakeAutoDetect` config entries are removed from foreman.conf and puppet.conf when using Passenger 4, since they have been deprecated.

When successfully configured, two Passenger RackApp processes will be visible and by inspecting the open files, the Ruby version being loaded can be confirmed:

    # ps auxww | grep RackApp
    foreman  16627  0.1 15.4 466980 157196 ?       Sl   07:35   0:09 Passenger RackApp: /usr/share/foreman
    puppet   16697  0.8 11.3 253080 115720 ?       Sl   07:35   1:13 Passenger RackApp: /etc/puppet/rack
    # lsof -p 16697 | grep libruby
    ruby    16697 puppet  mem    REG              253,0   951224  272286 /usr/lib64/libruby.so.1.8.7
    # lsof -p 16627 | grep libruby
    ruby    16627 foreman  mem    REG              253,0  2041096  171190 /opt/rh/ruby193/root/usr/lib64/libruby.so.1.9.1
